--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,14 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "paths": {
-      "~/*": ["./src/*"]
+      "@core/*": ["src/app/core/*"],
+      "@data/*": ["src/app/data/*"],
+      "@layout/*": ["src/app/layout/*"],
+      "@modules/*": ["src/app/modules/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@utils/*": ["src/app/utils/*"],
+      "@env/*": ["src/environments/*"],
+      "@assets/*": ["src/assets/*"]
     }
   },
   "angularCompilerOptions": {
