--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.0",
     "tslib": "^2.3.0",
