--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
   "rules": {
     "scss/dollar-variable-pattern": ["", { "ignore": "global" }],
     "scss/at-mixin-pattern": ["", { "ignore": "global" }],
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "color-function-notation": "legacy"
   }
 }
