--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,9 +5,15 @@
     "stylelint-config-prettier"
   ],
   "rules": {
+    "selector-class-pattern": null,
+    "color-function-notation": "legacy",
     "scss/dollar-variable-pattern": ["", { "ignore": "global" }],
     "scss/at-mixin-pattern": ["", { "ignore": "global" }],
-    "selector-class-pattern": null,
-    "color-function-notation": "legacy"
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind"]
+      }
+    ]
   }
 }
