--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
+    "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "8.5.0",
@@ -46,11 +47,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
     "prettier": "2.8.1",
     "stylelint": "^14.16.0",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
+    "tailwindcss": "^3.2.6",
     "typescript": "~4.8.2"
   }
 }
