--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", "@angular/cdk/overlay-prebuilt.css"],
             "scripts": [],
             "stylePreprocessorOptions": {
               "includePaths": [
