--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@fortawesome/angular-fontawesome": "0.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@schematics/angular": "^15.1.5",
     "ngx-skeleton-loader": "^6.0.0",
     "rxjs": "~7.5.0",
