--- a/standalone-starter-kit/.eslintrc.json
+++ b/standalone-starter-kit/.eslintrc.json
@@ -75,7 +75,7 @@
             "skipComments": true
           }
         ],
-        "max-nested-callbacks": ["warn", 1],
+        "max-nested-callbacks": "warn",
         "max-params": "warn",
         "max-statements-per-line": "warn",
         "no-else-return": "warn",
@@ -100,6 +100,14 @@
         "one-var-declaration-per-line": ["warn", "always"],
         "operator-assignment": ["warn", "always"],
         "operator-linebreak": ["warn", "none"]
+      }
+    },
+    {
+      "files": [
+        "*.spec.ts"
+      ],
+      "rules": {
+        "max-lines-per-function": "off"
       }
     },
     {
