--- a/standalone-starter-kit/package.json
+++ b/standalone-starter-kit/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "format": "prettier --write \"./**/*.{ts,json}\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -44,6 +45,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.24",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.2"
   }
