--- a/standalone-starter-kit/.eslintrc.json
+++ b/standalone-starter-kit/.eslintrc.json
@@ -57,7 +57,7 @@
         ],
         "@typescript-eslint/no-empty-function": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
-        "arrow-parens": ["warn", "as-needed"],
+        "arrow-parens": "warn",
         "block-spacing": ["warn", "always"],
         "complexity": [
           "warn",
