--- a/standalone-starter-kit/package.json
+++ b/standalone-starter-kit/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "format": "prettier --write \"./**/*.{ts,json}\"",
+    "format": "prettier --write \"src/**/*.{ts,json}\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
