--- a/marvel-heroes/angular.json
+++ b/marvel-heroes/angular.json
@@ -10,7 +10,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "standalone-starter-kit": {
+    "marvel-heroes": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -32,7 +32,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/standalone-starter-kit",
+            "outputPath": "dist/marvel-heroes",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -80,10 +80,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "standalone-starter-kit:build:production"
+              "browserTarget": "marvel-heroes:build:production"
             },
             "development": {
-              "browserTarget": "standalone-starter-kit:build:development"
+              "browserTarget": "marvel-heroes:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -91,7 +91,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "standalone-starter-kit:build"
+            "browserTarget": "marvel-heroes:build"
           }
         },
         "test": {
