--- a/standalone-starter-kit/angular.json
+++ b/standalone-starter-kit/angular.json
@@ -16,7 +16,8 @@
         "@schematics/angular:component": {
           "inlineStyle": true,
           "style": "scss",
-          "standalone": true
+          "standalone": true,
+          "changeDetection": "OnPush"
         },
         "@schematics/angular:directive": {
           "standalone": true
