--- a/forms/.eslintrc.json
+++ b/forms/.eslintrc.json
@@ -34,60 +34,25 @@
             "style": "kebab-case"
           }
         ],
-        "@typescript-eslint/naming-convention": [
-          "warn",
-          {
-            "format": ["camelCase"],
-            "leadingUnderscore": "forbid",
-            "selector": "default"
-          },
-          {
-            "format": ["PascalCase"],
-            "selector": "typeLike"
-          },
-          {
-            "format": ["PascalCase"],
-            "prefix": ["T", "K"],
-            "selector": "typeParameter"
-          },
-          {
-            "format": ["UPPER_CASE"],
-            "selector": "enumMember"
-          }
-        ],
         "@typescript-eslint/no-empty-function": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "arrow-parens": "warn",
-        "block-spacing": ["warn", "always"],
-        "complexity": [
+        "block-spacing": [
           "warn",
-          {
-            "max": 5
-          }
+          "always"
         ],
-        "curly": ["warn", "all"],
-        "max-depth": ["warn", 3],
-        "max-lines-per-function": [
+        "curly": [
           "warn",
-          {
-            "max": 10,
-            "skipBlankLines": true,
-            "skipComments": true
-          }
+          "all"
+        ],
+        "max-depth": [
+          "warn",
+          3
         ],
         "max-nested-callbacks": "warn",
         "max-params": "warn",
         "max-statements-per-line": "warn",
         "no-else-return": "warn",
-        "no-magic-numbers": [
-          "warn",
-          {
-            "detectObjects": false,
-            "enforceConst": true,
-            "ignore": [-1, 0, 1, 2, 10, 100],
-            "ignoreArrayIndexes": true
-          }
-        ],
         "no-multiple-empty-lines": [
           "warn",
           {
@@ -97,9 +62,14 @@
         ],
         "no-nested-ternary": "warn",
         "no-unneeded-ternary": "warn",
-        "one-var-declaration-per-line": ["warn", "always"],
-        "operator-assignment": ["warn", "always"],
-        "operator-linebreak": ["warn", "none"]
+        "one-var-declaration-per-line": [
+          "warn",
+          "always"
+        ],
+        "operator-assignment": [
+          "warn",
+          "always"
+        ]
       }
     },
     {
