--- a/signals/angular.json
+++ b/signals/angular.json
@@ -45,7 +45,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/app/theming/theming.component.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -109,7 +109,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/app/theming/theming.component.scss",
               "src/styles.scss"
             ],
             "scripts": []
